# TinyOS

./: .gitignore
MiniOS/: CMakeLists.txt  build.sh
MiniOS/src/: main.cpp
MiniOS/src/filesystem/: filesystem.cpp  filesystem.h
MiniOS/src/io/: disk_scheduler.h
MiniOS/src/memory/: memory_manager.cpp  memory_manager.h
MiniOS/src/process/: process.h  scheduler.cpp  scheduler.h
MiniOS/src/sync/: producer_consumer.cpp  producer_consumer.h  semaphore.cpp  semaphore.h
TinyOS/: Makefile  linker.ld
TinyOS/boot/: boot.asm
TinyOS/drivers/: vga.c  vga.h
TinyOS/kernel/: kernel.c  kernel_entry.asm
TinyOS/lib/: string.cpp  string.h
新实验手册！/: MiniOS-Demo规划.md  MiniOS与真实OS的差距.md  操作系统第六版知识点整理.md  第一阶段-搭框架与进程创建.md  第三阶段-进程调度.md  第二阶段-内存管理.md  第五阶段-文件系统与磁盘调度.md  第六阶段-虚拟内存与死锁.md  第四阶段-并发与同步.md
方向A的实验手册/: TinyOS-Demo规划.md  第一阶段-引导与启动.md  第三阶段-内存管理.md  第二阶段-中断与时钟.md  第五阶段-磁盘驱动与文件系统.md  第六阶段-用户态与系统调用.md  第四阶段-进程与调度.md
规划文件/: 实验手册-第一阶段-光栅化三角形.md  实验手册-第三阶段-深度缓冲与实心渲染.md  实验手册-第二阶段-MVP变换与线框渲染.md  实验手册-第五阶段-光照模型.md  实验手册-第六阶段-阴影映射.md  实验手册-第四阶段-纹理映射.md  软渲染器Demo规划.md
